--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -6,4 +7,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.app-container {
+  .navbar-nav {
+    .nav-link {
+      &.active {
+        font-weight: 500;
+      }
+    }
+  }
 }
