--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -9,3 +9,14 @@
         background-color: rgb(43 43 43 / 70%);
     }
 }
+
+.admin-content {
+    width: 100%;
+    .admin-header {
+        padding: 10px 0;
+        border-bottom: 1px solid #000;
+    }
+    .admin-main {
+
+    }
+}
