--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,3 +22,13 @@
         opacity: 0.8;
     }
 }
+
+.header-container {
+    .navbar-expand-lg {
+        .navbar-collapse {
+            .navbar-nav {
+                padding-right: 20px;
+              }
+        }
+    }
+}
