--- a/src/App.scss
+++ b/src/App.scss
@@ -52,14 +52,13 @@ p.hero-module-body {
   line-height: 1.2;
 }
 
-a.hero-signup {
+.hero-signup {
   cursor: pointer;
   font-family: inherit;
   -webkit-box-pack: center;
   justify-content: center;
   text-align: center;
   font-weight: 500;
-  width: 100%;
   font-size: 16px;
   line-height: 1.5;
   color: rgb(255, 255, 255);
