Create multiple languages

--- a/src/App.scss
+++ b/src/App.scss
@@ -75,3 +75,8 @@ p.hero-module-body {
 .hero-module-action {
   text-align: left;
 }
+.languages {
+  .dropdown-toggle::after {
+    display: none !important;
+  }
+}
