--- a/src/components/User/DetailQuiz.scss
+++ b/src/components/User/DetailQuiz.scss
@@ -71,3 +71,11 @@
         }
     }
 }
+.incorrect {
+    font-size: 28px;
+    color: red;
+}
+.correct {
+    font-size: 28px;
+    color: green;
+}
