--- a/src/components/Admin/Content/Question/Questions.scss
+++ b/src/components/Admin/Content/Question/Questions.scss
@@ -1,7 +1,7 @@
 .questions-container {
     overflow: hidden;
-    padding-left: 5px;
-    padding-bottom: 10px;
+    padding: 40px;
+
 }
 
 .group-upload {
